# api/modules/sample/router.go
@@ -11,4 +11,5 @@ func RegisterRoutes(parentRouter huma.API, h *handlers.Handlers) {
 	groups := routing.NewBuilder(parentRouter, "/samples", "Samples").Groups()
 
 	routing.GET(groups.Public, "", "Get Samples", h.GetSamplesHandler)
+	routing.GET(groups.Public, "/nearby", "Get Nearby Samples", h.GetNearbySamplesHandler)
 }
