# api/openapi.json
@@ -82,6 +82,33 @@
         },
         "type": "object"
       },
+      "GetNearbySamplesResponseBody": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "https://example.com/schemas/GetNearbySamplesResponseBody.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "samples": {
+            "items": {
+              "$ref": "#/components/schemas/SampleDTO"
+            },
+            "type": [
+              "array",
+              "null"
+            ]
+          }
+        },
+        "required": [
+          "samples"
+        ],
+        "type": "object"
+      },
       "GetSamplesResponseBody": {
         "additionalProperties": false,
         "properties": {
@@ -161,7 +188,7 @@
             "schema": {
               "enum": [
                 "name",
-                "createdAt"
+                "created_at"
               ],
               "type": "string"
             }
@@ -202,6 +229,75 @@
           }
         },
         "summary": "Get Samples",
+        "tags": [
+          "Samples"
+        ]
+      }
+    },
+    "/samples/nearby": {
+      "get": {
+        "operationId": "get-nearby-samples",
+        "parameters": [
+          {
+            "explode": false,
+            "in": "query",
+            "name": "lat",
+            "required": true,
+            "schema": {
+              "format": "double",
+              "maximum": 90,
+              "minimum": -90,
+              "type": "number"
+            }
+          },
+          {
+            "explode": false,
+            "in": "query",
+            "name": "lng",
+            "required": true,
+            "schema": {
+              "format": "double",
+              "maximum": 180,
+              "minimum": -180,
+              "type": "number"
+            }
+          },
+          {
+            "explode": false,
+            "in": "query",
+            "name": "limit",
+            "required": true,
+            "schema": {
+              "format": "int64",
+              "maximum": 100,
+              "minimum": 1,
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetNearbySamplesResponseBody"
+                }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorModel"
+                }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Get Nearby Samples",
         "tags": [
           "Samples"
         ]
